1999-11-30  Havoc Pennington  <hp@pobox.com>

	* configure.in: Add AM_CONDITIONAL for inside gnome-libs

	* src/Makefile.am: conditionalize GnomeCanvasPixbuf
	
1999-11-29  Federico Mena Quintero  <federico@redhat.com>

	* src/Makefile.am: Uncomment the GnomeCanvasPixbuf sources.  This
	should be made conditional, not blindly commented out.

1999-11-29  Jonathan Blandford  <jrb@redhat.com>

	* src/Makefile.am (ICO_LIB): Added another loader from Arjan to
	handle .ico files.  Cool.

1999-11-24  Jonathan Blandford  <jrb@redhat.com>

	* src/io-bmp.c (OneLine24): new patch from Arjan to handle
	compressed bmps.

1999-11-24  James Henstridge  <james@daa.com.au>

	* configure.in (AC_OUTPUT): altered hack to place the symlink in the
	top builddir rather than src.  This still builds fine, and does not
	get gtk-doc into an infinite loop when trying to find all the source
	files.

1999-11-23  Jonathan Blandford  <jrb@redhat.com>

	* Removed #PRAGMA } from headers.  Also, make compile if you don't
	have it installed, already.

1999-11-22  Federico Mena Quintero  <federico@redhat.com>

	* src/gnome-canvas-pixbuf.c (gnome_canvas_pixbuf_draw): Create the
	temporary buffer to the size of the interesction of the bounding
	box and the expose area, not the whole expose area.  This speeds
	up things a lot.

	* src/gdk-pixbuf-render.c (gdk_pixbuf_render_threshold_alpha): Do
	not paint black on the mask, since we already cleared it in a
	single gdk_draw_rectangle() operation.

1999-11-22  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (GDK_PIXBUF_DIR): Fix for srcdir != builddir.

1999-11-22  Havoc Pennington  <hp@pobox.com>

	* src/Makefile.am (GDK_PIXBUF_LIBS): Patch from Paul Fisher
	<pnfisher@redhat.com> adds all -lgdk-pixbuf and all other
	dependencies to LIBADD variables for loadable modules. Necessary
	for a Java dynamic loading thing to be able to figure it out.

1999-11-22  Havoc Pennington  <hp@pobox.com>

	* src/io-png.c (image_load_increment): Call the update_area